--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/investment-calculator-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/investment-calculator-logo.png"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Investment Calculator</title>
   </head>
-  <body>
+  <body
+    class="bg-gradient-to-r from-[#303b37] to-[#1a1f1d] font-quicksand text-[#e1eeeb] min-h-screen"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
